5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1836_1274.log
== TEST (2019-06-23 14:01:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mat[i,j] = a
	a = a + 1
	b = b + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:04:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:04:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:04:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:06:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		if(mat[i,j] = 1)
	
print(mat)
-- ERROR:
File "XXXX", line 9
    if(mat[i,j] = 1)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:07:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:08:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
		a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:08:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:08:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1
b = 0
for i in range(n):
	for j in range(n):
		mat[i,j] = a
a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:12:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = a
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:13:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = a
		if(i < j):
			mat[i,j] = a - 1
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:13:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = a
		if(i < j):
			mat[i,j] = a - 1
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:15:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = a
		elifif(i < j):
			mat[i,j] = a - 1
	a = a + 1
	
print(mat)
-- ERROR:
File "XXXX", line 11
    elifif(i < j):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 14:15:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)
a = 1

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = a
		elif(i < j):
			mat[i,j] = a - 1
	a = a + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:37:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = i + 1
		elif(i < j):
			mat[i,j] = i + 1
		else: 
			mat[i,j] = j + 1
	
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 10:37:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("Numero natural: "))
mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range(n):
		if(i == j):
			mat[i,j] = i + 1
		elif(i < j):
			mat[i,j] = i + 1
		else: 
			mat[i,j] = j + 1
	
print(mat)
-- EXECUTION TIME:
1.03997
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
